--- a/s.html
+++ b/s.html
@@ -1,1 +1,85 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<title>wh973381</title>
+
+<link rel="stylesheet" href="https://cdn.plyr.io/3.5.6/plyr.css">
+    
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<link rel="icon" href="https://cdn.plyr.io/static/icons/favicon.ico" />
+<link rel="icon" type="image/png" href="https://cdn.plyr.io/static/icons/32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="https://cdn.plyr.io/static/icons/16x16.png" sizes="16x16" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.plyr.io/static/icons/180x180.png" />
+
+
+
+<link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/demo.css" />
+
+<link rel="preload" as="font" crossorigin type="font/woff2" href="https://cdn.plyr.io/static/fonts/gordita-medium.woff2" />
+<link rel="preload" as="font" crossorigin type="font/woff2" href="https://cdn.plyr.io/static/fonts/gordita-bold.woff2" />
+
+
+<script>document.addEventListener("DOMContentLoaded",()=>{const e=document.querySelector("video"),n=e.getElementsByTagName("source")[0].src,o={};if(Hls.isSupported()){var config={maxMaxBufferLength:100,};const t=new Hls(config);t.loadSource(n),t.on(Hls.Events.MANIFEST_PARSED,function(n,l){const s=t.levels.map(e=>e.height);o.quality={default:s[0],options:s,forced:!0,onChange:e=>(function(e){window.hls.levels.forEach((n,o)=>{n.height===e&&(window.hls.currentLevel=o)})})(e)};new Plyr(e,o)}),t.attachMedia(e),window.hls=t}else{new Plyr(e,o)}});</script>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script> <script src="https://cdn.plyr.io/3.6.2/plyr.polyfilled.js"></script> 
+<script src="https://cdn.plyr.io/3.6.8/plyr.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/hls.js"></script>
+<script src="https://unpkg.com/plyr@3"></script>
+</head>
+<body>
+<div class="grid">
+<header>
+<h1>I<span>hH&nbsp;</span>P<span>H</span>L</h1>
+<p>
+	<b>Watch Live : Tata IPL 2022 </b></br>
+LSG vs CSK 7th Match
+</p>
+<div class="call-to-action">
+<a href="https://t.me/wh973381" target="_blank" class="button">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 240 240" class="icon" role="presentation">
+<path d="M66.964 134.874s-32.08-10.062-51.344-16.002c-17.542-6.693-1.57-14.928 6.015-17.59 7.585-2.66 186.38-71.948 194.94-75.233 8.94-4.147 19.884-.35 14.767 18.656-4.416 20.407-30.166 142.874-33.827 158.812-3.66 15.937-18.447 6.844-18.447 6.844l-83.21-61.442z" fill="none" stroke="#000" stroke-width="10"/>
+  <path d="M92.412 201.62s4.295.56 8.83-3.702c4.536-4.26 26.303-25.603 26.303-25.603" fill="none" stroke="#000" stroke-width="10"/>
+  <path d="M66.985 134.887l28.922 14.082-3.488 52.65s-4.928.843-6.25-3.613c-1.323-4.455-19.185-63.12-19.185-63.12z" fill-rule="evenodd" stroke="#000" stroke-width="10" stroke-linejoin="bevel"/>
+  <path d="M66.985 134.887s127.637-77.45 120.09-71.138c-7.55 6.312-91.168 85.22-91.168 85.22z" fill-rule="evenodd" stroke="#000" stroke-width="9.67" stroke-linejoin="bevel"/>
+
+</svg>
+Join Our Telegram Channel
+</a>
+</div>
+</header>
+<main>
+	
+	
+<div id="container">
+<div class="card bg-dark-light mh-300 p-0">
+<video poster="https://i.imgur.com/qRCsxfn.png"  controls preload="metadata" style="--plyr-color-main: #00b3ff;"><source src="https://owlflixt.herokuapp.com/cric.php?index.m3u8" type="application/x-mpegURL"></video>
+</div>
+
+<ul>
+<li class="plyr__cite plyr__cite--video" hidden>
+<small>
+<svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 15v4c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2v-4M17 9l-5 5-5-5M12 12.8V2.5"/></svg>
+<a href="https://t.me/wh973381" target="_blank">Join Telegram Group ✅</a
+              >
+&copy; wh973381
+</small>
+</li>
+<li> Join Telegram And Watch Live IPL Without Any Buffing. in Multiple Languages and Multiple Quality</li>
+</ul>
+</main>
+</div>
+<aside>
+<svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="18" cy="5" r="3"></circle><circle cx="6" cy="12" r="3"></circle><circle cx="18" cy="19" r="3"></circle><line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line><line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line></svg>
+<p>
+If you think wh973381 good,
+<a href="https://wa.me/?text=Watch%20Live%20IPL%20https://wh973381.ispot.cc" target="_blank" class="js-shr">Share it 💝</a>
+</p>
+</aside>
+<script src="https://cdn.plyr.io/3.6.12/demo.js" crossorigin="anonymous"></script>
+</body>
+</html>
+
