--- a/s.html
+++ b/s.html
@@ -56,7 +56,7 @@ Join Our Telegram Channel
 	
 <div id="container">
 <div class="card bg-dark-light mh-300 p-0">
-<video poster="https://i.imgur.com/qRCsxfn.png"  controls preload="metadata" style="--plyr-color-main: #00b3ff;"><source src="https://owlflixt.herokuapp.com/cric.php?index.m3u8" type="application/x-mpegURL"></video>
+<video poster="https://i.imgur.com/qRCsxfn.png"  controls preload="metadata" style="--plyr-color-main: #00b3ff;"><source src="https://e7384f46cb09.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.922366157501.channel.GOtmfkLbP0bY.m3u8" type="application/x-mpegURL"></video>
 </div>
 
 <ul>
