--- a/s.html
+++ b/s.html
@@ -50,7 +50,7 @@ LSG vs CSK 7th Match
 Join Our Telegram Channel
 </a>
 </div>
-</header>
+</header><iframe data-aa='1976686' src='//ad.a-ads.com/1976686?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
 <main>
 	
 	
