--- a/s.html
+++ b/s.html
@@ -50,7 +50,7 @@ LSG vs CSK 7th Match
 Join Our Telegram Channel
 </a>
 </div>
-</header><iframe data-aa='1976686' src='//ad.a-ads.com/1976686?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+</header>
 <main>
 	
 	
@@ -63,6 +63,9 @@ Join Our Telegram Channel
 <li class="plyr__cite plyr__cite--video" hidden>
 <small>
 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 15v4c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2v-4M17 9l-5 5-5-5M12 12.8V2.5"/></svg>
+
+<iframe data-aa='1976686' src='//ad.a-ads.com/1976686?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
 <a href="https://t.me/wh973381" target="_blank">Join Telegram Group ✅</a
               >
 &copy; wh973381
