--- a/player.html
+++ b/player.html
@@ -1,1 +1,2 @@
 
+<script src="https://cdn.radiantmediatechs.com/rmp/7.5.1/js/rmp.min.js"></script> <div id="rmp"></div> <script> var settings = { src: { hls: "http://wsvod.neestream.net/anandmedia/sports01/tracks-v1a1/mono.m3u8"}, width: 640, height: 360, skin: "s3", licenseKey: "Kl8lYWVlbz1jczl2MnNrdWU/cm9tNWRhc2lzMzBkYjBBJV8q" }; var elementID = "rmp"; var rmp = new RadiantMP(elementID); rmp.init(settings); </script>
