--- a/player.html
+++ b/player.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html><head>
-<title>@htmlcoding_html_coding_free</title>
-<meta name="viewport"content="width=device-width,initial-scale=1"></meta>
-<script src="https://cdn.radiantmediatechs.com/rmp/5.10.2/js/rmp.min.js"></script>    
+<title>Aki live Tv</title>
+<meta name="viewport" content="width=device-width,initial-scale=1"></meta>
+<script src="https://cdn.radiantmediatechs.com/rmp/5.10.2/js/rmp.min.js"></script>
 <div class="row">
 <div class="col-sm-12">
 <div class="rmp-playlist-container">
@@ -17,41 +17,55 @@ padding:0;
 background:#fff;
 }
 </style>
-</head> 
+</head>
 
-<!-- { src: 
-{ hls:"#"}, "contentMetadata": 
-{ "title": "#", "description": "#", "thumbnail":"#", "poster": [ "#" ] },}, -->
-   
 <script> var playlistData =  [
 
 { src: 
-{ hls:"http://tv.mototvlive.net:25461/live/SAYED/801603/1551.m3u8"}, 
+{ hls:"https://aws.nowtv.vip/live/sscricket/playlist.m3u8"}, 
 "contentMetadata": { 
-"title": "Hindi", 
-"description": "H", 
+"title": "S cricket", 
 "thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU", 
-"poster": [ "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU" ] },},
+"poster": [ "#" ] },},
 
 { src: 
 { hls:"http://wsvod.neestream.net/anandmedia/sports01/tracks-v1a1/mono.m3u8"}, 
 "contentMetadata": { 
 "title": "English", 
-"description": "E", 
 "thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU", 
-"poster": [ "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU" ] },},
+"poster": [ "#" ] },},
 
 { src: 
 { hls:"https://m-c036-j2apps.s.llnwi.net/hls/5045.BFlixMovies.in.m3u8"}, 
 "contentMetadata": { 
 "title": "Hello 3", 
-"description": "Hello", 
 "thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU", 
-"poster": [ "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU" ] },},
+"poster": [ "#" ] },},
+
+{ src: 
+{ hls:"https://m-c036-j2apps.s.llnwi.net/hls/5045.BFlixMovies.in.m3u8"}, 
+"contentMetadata": { 
+"title": "Hello 3", 
+"thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU", 
+"poster": [ "#" ] },},
+
+{ src: 
+{ hls:"https://m-c036-j2apps.s.llnwi.net/hls/5045.BFlixMovies.in.m3u8"}, 
+"contentMetadata": { 
+"title": "Hello 3", 
+"thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU", 
+"poster": [ "#" ] },},
+
+{ src: 
+{ hls:"https://m-c036-j2apps.s.llnwi.net/hls/5045.BFlixMovies.in.m3u8"}, 
+"contentMetadata": { 
+"title": "Hello 3", 
+"thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU", 
+"poster": [ "#" ] },},
 
 
 ];var settings = {
-licenseKey: 'Kl8lbz16cz1rN2l2enM9Z2M9NnZvMnllaT9yb201ZGFzaXMzMGRiMEElXyo=',
+licenseKey: 'eWZmZ2d2Y3BrdEAxNTMwNjA2',
 skin: 's3',
 posterScaleMode: 'stretch',
 automaticFullscreenOnLandscape: true,
@@ -60,9 +74,9 @@ playlistUpNextAutoplay: true,
 playlistEndedLoop: false,
 playlistData: playlistData
 };var elementID = 'rmpPlayer'; var rmp = new RadiantMP(elementID); rmp.init(settings); 
-</script> 
+</script>
 </div>
 </div>
 </div>
-</body> 
-</html>  
+</body>
+</html> 
