--- a/player.html
+++ b/player.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head>
-<title>Aki live Tv</title>
+<title>🚨IPL LIVE🚨</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"></meta>
 <script src="https://cdn.radiantmediatechs.com/rmp/5.10.2/js/rmp.min.js"></script>
 <div class="row">
@@ -22,7 +22,7 @@ background:#fff;
 <script> var playlistData =  [
 
 { src: 
-{ hls:"https://aws.nowtv.vip/live/sscricket/playlist.m3u8"}, 
+{ hls:"http://178.218.196.218:8000/play/a008/index.m3u8"}, 
 "contentMetadata": { 
 "title": "S cricket", 
 "thumbnail":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-Ur5t_tg3BxCzyZ4HWJNv_Du4pr_nzqHn-Q&usqp=CAU", 
@@ -66,7 +66,7 @@ background:#fff;
 
 ];var settings = {
 licenseKey: 'eWZmZ2d2Y3BrdEAxNTMwNjA2',
-skin: 's3',
+skin: 's4',
 posterScaleMode: 'stretch',
 automaticFullscreenOnLandscape: true,
 preload: 'nono',
